log/build_2024-09-23_13-34-10/leg_dector/stderr.log
  File "/home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector/go_back.py", line 483
    if self.go_back_bool == True
                               ^
SyntaxError: invalid syntax

